# cad_rms_data_quality

./: .gitignore  2026_02_03_publish_call_data_tbx1.md  BACKFILL_INVESTIGATION_20260205.md  BACKFILL_PERFORMANCE_OPTIMIZATION_PLAN.md  BACKFILL_QUICK_GUIDE.md  BACKFILL_TONIGHT_CHECKLIST.md  BUG_FIX_ERROR_CONSISTENCY.md  CHANGELOG-PD_BCI_LTP.md  CHANGELOG.md  CLAUDE.md  Claude.md  Deploy-ToRDP-Simple.ps1  MANUAL_COPY_GUIDE.md  NEXT_ACTIONS.md  NEXT_STEPS.md  ONE_TIME_BACKFILL_TODAY.md  OPUS_BRIEFING_COMPREHENSIVE_VALIDATION.md  PLAN.md  PREFLIGHT_COPY_SCRIPTS.ps1  QUICK_START_DAILY_PUBLISH.md  Quick-Test-RDPConnection.ps1  README.md  REMOTE_SERVER_GUIDE.md  Run-GeocodeDecember2025.ps1  SCHEDULED_UPLOAD_GUIDE.md  SESSION_SUMMARY_CONFIG_BUGS_20260204.md  STAGED_BACKFILL_PLAN_FINAL.md  START_HERE_TOMORROW.md  SUMMARY.md  Schedule-PublishCallData.ps1  analyze_how_reported.py  analyze_multi_value_how_reported.py  check_baseline_phone911.py  check_phone_911_source.py  consolidate_cad_2019_2026.py  copy_consolidated_dataset_to_server.ps1  copy_csv_from_rdp.ps1  copy_via_rdp.ps1  export_cfstable_to_csv.py  how_reported_full_analysis.txt  (+6 more)
.claude/: settings.local.json
config/: consolidation_sources.yaml  rms_sources.yaml  schemas.yaml  validation_rules.yaml
docs/: .pr_body.txt  2026_01_31_claude_code_prompt_backup_logic.md  APPLIED_GEOMETRY_FIX.md  ARCGIS_SCHEDULED_TASK_VERIFICATION.md  ArcGIS_Pro_CAD_Backfill_Setup_Guide.md  BACKFILL_DATE_RANGE.md  BASELINE_QUICK_ANSWERS.md  BASELINE_UPDATE_STRATEGY.md  BUG_FIX_EMPTY_CONFIG_DATA_LOSS.md  BUG_FIX_EMPTY_PATH_SILENT_SKIP.md  CAD_RMS_Expansion_Plan_Implementation_And_Docs_Sync.md  CONFIG_BUGS_COMPLETE_REPORT.md  COORDINATE_COLUMN_FALLBACK.md  DAILY_UPDATE_GAP_ANALYSIS_20260209.md  DEPLOYMENT_NOTES_TASK_SCHEDULER.md  DEPLOY_VERIFICATION.md  DRIFT_PLAN_STATUS_UPDATE.md  Diagnostic_Log_20260216_1654.txt  Diagnostic_Log_v3.txt  Docs_Release_V126_PR_Merge_Tag_Push.md  EMAIL_TO_ESRI_CHRIS_DELANEY.md  EMERGENCY_BACKFILL_START_HERE.md  EXECUTE_NOW_BACKFILL.md  Email_To_Celbrica_ESRI_20260216.txt  Email_To_Celbrica_ESRI_20260223.txt  Email_To_Weber_Marino_20260216.txt  FINAL_SUMMARY_NEXT_STEPS.md  GAP_AND_COORDINATES_CHECKLIST.md  GAP_BACKFILL_UNIFIED_IMPLEMENTATION_PLAN.md  GEMINI_QUICK_START.txt  GEOCODE_DECEMBER_2025_RDP_REVIEW.md  GEOMETRY_FIX_PATCH_SUMMARY.md  HANDOFF_20260209.md  HANDOFF_20260216_BACKFILL_SESSION.md  HANDOFF_LATER_TODAY_20260205.md  INCREMENTAL_RUN_GUIDE.md  MIGRATION_CAD_CLEANING_ENGINE.md  MONDAY_CHECKLIST_PRINT.md  NEXT_ACTIONS_PHONE911_FIX.md  NIGHTLY_AUTOMATION_ASSESSMENT.md  (+23 more)
monthly_validation/: __init__.py
patches/: complete_backfill_simplified_geometry_fix.patch  publish_with_xy_coordinates_no_changes_needed.patch
rdp/: ESRI_CADExport.xlsx  ESRI_NIBRSExport.xlsx  Publish Call Data.py
(+763 files in other folders)
