# // 2026-01-30-10-35-00 EST
# // cad_rms_data_quality/pyproject.toml
# // Author: R. A. Carucci
# // Purpose: Project configuration and metadata for CAD/RMS data quality system

[project]
name = "cad-rms-data-quality"
version = "1.5.0"
description = "Unified CAD/RMS data quality system for validation and consolidation"
readme = "README.md"
license = {text = "Internal Use - City of Hackensack Police Department"}
authors = [
    {name = "R. A. Carucci", email = "carucci_r@hackensack.org"}
]
requires-python = ">=3.9"
keywords = ["cad", "rms", "data-quality", "validation", "police", "law-enforcement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "usaddress>=0.5.10",
    "rapidfuzz>=3.0.0",
    "jinja2>=3.1.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pandas-stubs>=2.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
consolidate-cad = "consolidation.scripts.consolidate_cad:main"
validate-cad = "monthly_validation.scripts.validate_cad:main"
validate-rms = "monthly_validation.scripts.validate_rms:main"
check-schemas = "shared.utils.schema_loader:print_validation_summary"

[project.urls]
Documentation = "docs/"
Repository = "https://github.com/hackensack-pd/cad_rms_data_quality"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "consolidation*", "monthly_validation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["shared", "consolidation", "monthly_validation"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
